# movie-sentiment-analysis

./: README.md  pyproject.toml
src/upsert_agent/: crew.py  main.py
src/upsert_agent/config/: agents.py  agents.yaml  tasks.py  tasks.yaml
