[tool.poetry]
name = "movie-sentiment-analysis"
version = "0.1.0"
description = ""
authors = ["ssabrut <michael.gunawan2002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
python-dotenv = "^1.0.1"
crewai = "^0.30.11"
langchain-groq = "^0.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
